--- a/.env.example
+++ b/.env.example
@@ -21,10 +21,10 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=crm
+# DB_DATABASE=market_place
 # DB_USERNAME=root
 # DB_PASSWORD=
 
